namespace StaticData
{
    public struct Constants
    {
        // approximate values
        public const float Epsilon = 0.1f;
        public const float DeltaAttraction = 0.2f;
        public const float DeltaSpawn = 0.015f;


        // Animator
        public const string IsMove = "IsMove";
        public const string MoveX = "MoveX";
        public const string MoveY = "MoveY";
        public const string Idle = "Idle";
        public const string Walk = "Walk";
        public const string Attack = "Attack";
        public const string IsPlayerAttack = "IsAttack";
        public const string Die = "Die";
        public const string Speed = "Speed";
    }
}